[package]
name = "is-container"
description = "Check if the process is running inside a container."
version = "0.1.0"
authors = ["Shaolong Chen <shaolong.chen@outlook.it>"]
license = "MIT"
repository = "https://github.com/maolonglong/is-container"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17"
